--- a/adidas.html
+++ b/adidas.html
@@ -33,7 +33,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+ <link rel="stylesheet" href="css/main.css">
 
   <!-- =======================================================
   * Template Name: Adidas
